# sfMidi

./: CMakeLists.txt  Readme.md  Readme.txt
include/: sfMidi.h
include/sfMidi/: Error.h  Midi.h
sfMidi/: sfMidi.sln
sfMidi-CMake/include/sfMidi/: Music.h
sfMidi-CMake/src/sfMidi/: Music.cpp
sfMidi/sfMidi/: License.txt  sfMidi.vcxproj  sfMidi.vcxproj.filters
sfMidi/sfMidi/include/sfMidi/: Loader.h
sfMidi/sfMidi/lib/: sfMidi_d.lib
sfMidiTest/: sfMidiTest.sln
sfMidiTest/sfMidiTest/: sfMidiTest.vcxproj  sfMidiTest_d.ilk
src/sfMidi/: Loader.cpp  Midi.cpp
test/: main.cpp
